tests/paczka1/fuzzy1/27485883.err
Error in line 10: A617 A818 64,84
Error in line 15: 7YMvaLtiJ S358 77,07
Error in line 17: c7i2p7Y83n A818 02,0
Error in line 5: A617 A818 67,8
Error in line 12: yoptO5rmld S358 11,8
Error in line 14: c7i2p7Y83n A818 0,2
Error in line 28: PUx S796 93,7
Error in line 34: 7YMvaLtiJ S358 254,1
